<resources>
    <string name="app_name" translatable="false">MeePo</string>
    <string name="welcome_to_meepo">Welcome to MeePo</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_email_address">Email Address</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="create_account">Create Account</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="reset_password_comment">By clicking RESET, you will receive an email to reset your password</string>
    <string name="reset_btn">Reset</string>
    <string name="reset_email_address">Email Address</string>
    <string name="editinfo_about_headline">About</string>
    <string name="google_maps_api_key" translatable="false">AIzaSyDNAa6mE5f24Tg3ZuhEWf-T-uJUC1efSF8</string>

    <string name="sample_long_text" translatable="false">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don\'t look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn\'t anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.</string>
    <string name="like" translatable="false">LIKE</string>
    <string name="current_work">Current Work</string>
    <string name="age_edit_info">Age</string>
    <string name="edit_info_gender">Gender</string>
    <string name="edit_info_male">male</string>
    <string name="edit_info_female">female</string>
    <string name="login_password">Password</string>
    <string name="login_login">Login</string>
    <string name="register_first_name">First name</string>
    <string name="register_last_name">Last name</string>
    <string name="register_email_address">Email Address</string>
    <string name="register_password">Password</string>
    <string name="register_about_yourself">About Yourself</string>
    <string name="register_current_occupation">Current Occupation</string>
    <string name="register_age">Age</string>
    <string name="register_looking_for">Looking For</string>
    <string name="register_my_gender">My Gender</string>
    <string name="register_man">man</string>
    <string name="register_woman">woman</string>
    <string name="register_male">male</string>
    <string name="register_female">female</string>
    <string name="settings_discovery_settings">Discovery Settings</string>
    <string name="settings_my_current_locations">My Current Locations</string>
    <string name="settings_show_me">Show Me</string>
    <string name="settings_men">Men</string>
    <string name="settings_women">Women</string>
    <string name="settings_show_ages">Show Ages</string>
    <string name="profile_edit_info">EDIT INFO</string>
    <string name="profile_settings">SETTINGS</string>
    <string name="where_are_you">Where are you?</string>
    <string name="arena">Arena</string>
    <string name="demo_mode">Demo mode</string>
    <string name="you_have_no_matches_yet_never_give_up">You have no matches yet (Never give up)</string>
    <string name="log_out">Log out</string>
    <string name="unmatch">Unmatch</string>
    <string name="enter_chat_message">Enter chat message...</string>


</resources>
