<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/headline_text"
        android:layout_width="215dp"
        android:layout_height="90dp"
        android:layout_marginTop="76dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/welcome_to_meepo"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/start_reg_btn"
        android:layout_width="208dp"
        android:layout_height="53dp"
        android:layout_below="@+id/headline_text"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="75dp"
        android:background="@android:color/white"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/sign_up"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_login_btn"
        app:layout_constraintVertical_bias="0.179" />

    <Button
        android:id="@+id/start_login_btn"
        android:layout_width="208dp"
        android:layout_height="53dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorAccent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/start_reg_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headline_text" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />


</android.support.constraint.ConstraintLayout>